layout bug fix

--- a/src/app/main/content/pages/ticket-detail/ticket-head/ticket-head.component.scss
+++ b/src/app/main/content/pages/ticket-detail/ticket-head/ticket-head.component.scss
@@ -14,7 +14,7 @@
                 // padding: 3px;
                 border: black solid 1px;
                 background-color: #DDD;
-                height: 60px;
+                height: 70px;
             }
         }
 
@@ -58,6 +58,12 @@
         //     }
         // }
 
+        .default-select {
+          padding-top: 10px;
+        }
+        .msg-alert {
+          padding-top: 20px;
+        }
         span.alert {
             color: red;
             font-weight: bold;
@@ -70,10 +76,10 @@
         @keyframes blink {
             0%{opacity: 0;}
             50%{opacity: 1;}
-            100%{opacity: 0;}   
+            100%{opacity: 0;}
         }
 
-    
+
     }
 }
 
